Prevent title overlaying custom logo when printing
Previously, when a custom logo was set and the page was printed,
the custom logo and page title overlap.

For #109.

--- a/style.css
+++ b/style.css
@@ -1666,7 +1666,6 @@ p.entry-meta {
 	.site-inner {
 		padding-top: 0;
 		position: relative;
-		top: -100px;
 	}
 
 	.author-box {
